snapshot-tests/tests/snapshots/annotate_snippets__table_redefinition.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
expression: rendered
---
error: redefinition of table `"b"` at `a.b`
 --> table_redefinition:2:1
  |
1 | / [a.b]
2 | | [a."b"]
  | | -^^^^^^
  | | |
  | |_duplicate table
  |   first table instance
